tests/parse_error_node/parse_error_node.exp
ParseError.js:3
  3: function foo() { ### // invalid token
                      ^ Unexpected token ILLEGAL


Found 1 error
